editor-components/about/about5/about5.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  .max-content {
    display: flex;
    flex-direction: column;

    .main-wrapper {
      display: flex;
      flex: 1;
      gap: var(--composer-gap-md);

      .left-section {
        flex: 1;

        .card-1 {

          .title,
          .subtitle,
          .description {
            text-align: left;
            margin-left: 0;
            word-break: break-word;
          }

          .description {
            color: var(--composer-font-color-primary);
          }

          .buttons-container {
            display: flex;
            gap: var(--composer-gap-xs);
            flex-wrap: wrap;

            .button {
              .button-text {
                content: "";
              }
            }
          }
        }
      }

      .right-section {
        flex: 2;

        .content {
          display: flex;
          flex: 1;
          gap: var(--composer-gap-xl);
          flex-wrap: wrap;

          .right-column-card {
            flex: 1;

            .text {
              color: var(--composer-tertiary-color);
              text-align: justify;
              word-break: break-word;
            }

            .information {
              align-self: flex-start;
              align-items: flex-start;

              .name {
                color: var(--composer-primary-color);
                text-align: left;
                font-size: 2rem;
              }

              .job-title {
                color: var(--composer-tertiary-color);
                text-align: left;
                font-size: 20px;
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .main-wrapper {
        flex-direction: column;

        .left-section,
        .right-section {
          width: 100%;
        }

        .left-section {
          order: 1;

          .card-1 {
            padding-bottom: 0;
          }
        }

        .right-section {
          order: 2;

          .content {
            flex-direction: column;
            gap: var(--composer-gap-md);

            .right-column-card {
              width: 100%;
              gap: var(--composer-gap-md);

              .information {
                .name {
                  font-size: 1.7rem !important;
                }
              }
            }
          }
        }
      }
    }
  }
}

